--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-script-launcher": "^0.1.0",
+    "mocha": "^4.0.1",
     "phantomjs-prebuilt": "^2.1.7"
   }
 }
